--- a/mydocuments.html
+++ b/mydocuments.html
@@ -437,7 +437,7 @@
      However, they can rely on information from others who are close to you to help in the decision-making process.</p>
      <form class="form-inline">
        <div class="form-group">
-       <label for="additionalnames" id="additionalnames-label">Please seperate additional names by commas.</label>
+       <div id="additionalnames-label" style="background-color:#dddedb"><p>Please seperate additional names by commas.<p></div>
        <input type="text" class="form-control" id="additionalnames-input">
        </div>
   </form>
