--- a/yourvalues.html
+++ b/yourvalues.html
@@ -211,13 +211,14 @@
                     </span>
                     <h7 class='orange-heading'>Do you have faith or spiritual practices that you want your medical team to know about?</h7>
                     <div class="row">
-                        <div class="col-sm-2">
-                       <p><input type="checkbox" value=""><span class="checkbox-text">Yes</span></p>
-                       </div><!-- end of col-sm-2-->
-                      <div class="col-sm-2">
-                       <p><input type="checkbox" value=""><span class="checkbox-text">No<span></p>
-                      </div><!-- end of col-sm-2 -->
-                      <div class="col-sm-8"></div>
+                        <div class="col-sm-12">
+                          <div class="form-check form-check-inline">
+                           <input class="form-check-input" type="checkbox" id="choice1" value="yes">
+                           <label class="form-check-label" for="choice1">Yes</label>
+                           <input class="form-check-input" type="checkbox" id="choice2" value="yes">
+                           <label class="form-check-label" for="choice2">No</label>
+                         </div>
+                      </div><!-- end of col-sm-12 -->
                       </div> <!-- end of nested row-->
                       <div class="row">
                        <div class="col-sm-12">
@@ -238,14 +239,15 @@
                   </span>
                   <h7 class='orange-heading'>Do you want your medical team or loved ones to attempt to notify your faith or spiritual center?</h7>
                   <div class="row">
-                      <div class="col-sm-2">
-                     <p><input type="checkbox" value=""><span class="checkbox-text">Yes<span></p>
-                     </div><!-- end of col-sm-2-->
-                    <div class="col-sm-2">
-                     <p><input type="checkbox" value=""><span class="checkbox-text">No</span></p>
-                    </div><!-- end of col-sm-2 -->
-                    <div class="col-sm-8"></div>
-                    </div> <!-- end of nested row-->
+                            <div class="col-sm-12">
+                              <div class="form-check form-check-inline">
+                               <input class="form-check-input" type="checkbox" id="choice1" value="yes">
+                               <label class="form-check-label" for="choice1">Yes</label>
+                               <input class="form-check-input" type="checkbox" id="choice2" value="yes">
+                               <label class="form-check-label" for="choice2">No</label>
+                             </div>
+                           </div>
+                           </div> <!-- end of nested row-->
                     <div class="row">
                      <div class="col-sm-12">
                        <p>If yes, what are the name and numbed of your congregation, synagogue, or worship group?</p>
@@ -297,7 +299,7 @@
                       <button class="btn btn-default btn-block pull-right save-button">Save and Continue later</button>
                        <div class="col-sm-3"></div>
                       </div><!-- end of col-sm-12 -->
-                    </div> <!-- end of row -->
+                    </div> <!-- end of main container row -->
                   </div><!-- end of main container on page -->
 
 
